--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=films
+DB_DATABASE=tp1_laravel_binh
 DB_USERNAME=root
 DB_PASSWORD=
 
